# cpp_pipe_operator_helper

./: .gitignore  CMakeLists.txt  README.md  pipe_operator_helper.cppm  xmake.lua
.github/workflows/: test.yml
cmake/: cpp_pipe_operator_helper-config.cmake.in  install.cmake  test_package.cmake
include/: pipe_operator_helper.hpp
include/pipe_operator_helper/: pipe_operator.hpp  pipe_tag.hpp  type_cast.hpp
include/pipe_operator_helper/detail/: bit_cast_impl.hpp  config.hpp
src/: dll_dummy_export.cpp
test/: CMakeLists.txt  find_gtest.cmake  gtest_pch.hpp  pipe_operator_test.cpp  test_main.cpp  type_cast_test.cpp  xmake.lua
test/pipe_operators_tests/: 1arg.cpp  2args.cpp
test/xmake_test/: xmake_test.cpp
test_package/: CMakeLists.txt  main.cpp
